manifests/apps/podinfo-2/observability.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-anubis-podinfo-2
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: anubis-podinfo-2
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
      ports:
        - protocol: TCP
          port: 8923
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-podinfo-2
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: podinfo-2
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - podSelector:
            matchLabels:
              app: anubis-podinfo-2
      ports:
        - protocol: TCP
          port: 9898
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-observability-to-podinfo-2
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: podinfo-2
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 9797
